Solve a horizontal scroll

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1213,9 +1213,9 @@ img {
  height: 0;
 }*/
 
-body {
+/* body {
     overflow-x: hidden;
-}
+} */
 
 #navigation ul ul {
     position: absolute;
@@ -3327,6 +3327,12 @@ a:active {
 #navigation ul ul {
     position: absolute;
     top: 16px;
+
+    display: none;
+}
+
+#navigation ul li.has-sub:hover ul {
+    display: block;
 }
 
 @media only screen and (max-width:620px) {
